--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@gtm-support/vue2-gtm": "^1.3.0",
     "core-js": "^3.8.3",
     "vue": "^2.6.14"
   },
